feat: 添加笔记《Border 边框》

--- a/src/Web 前端/3.工程化/3.代码质量/2.eslint.md
+++ b/src/Web 前端/3.工程化/3.代码质量/2.eslint.md
@@ -4,22 +4,23 @@ createTime: 2025/12/19 20:30:33
 permalink: /web/engineering/gvecxyh4/
 ---
 
-## 1、你好 ESLint
+## 1、认识 ESLint
 
 - 官网：[https://eslint.org/](https://eslint.org/)
 - 中文网：[https://eslint.nodejs.cn/](https://eslint.nodejs.cn/)
 
-ESLint 是一个可配置的 JavaScript linter。它可以帮助你发现并修复 JavaScript 代码中的问题。问题可以是任何事情，从潜在的运行时错误到不遵循最佳实践，再到样式问题。
+ESLint 是一个高度可配置的 JavaScript 代码检查工具（linter），用于识别和报告 ECMAScript/JavaScript 代码中的问题模式。其核心目标是提升代码一致性、避免潜在错误，并确保遵循最佳实践。
 
-ESLint 是一个用于识别和报告在 ECMAScript/JavaScript 代码中发现的模式的工具，其目标是使代码更加一致并避免错误。
+✨ **核心特性**：
+- **问题检测**：从潜在运行时错误到代码风格问题全面覆盖
+- **完全插件化**：每条规则都是独立插件，支持运行时扩展
+- **生态丰富**：支持社区插件、自定义配置和解析器扩展
 
-ESLint 是完全插件化的。每条规则都是一个插件，你可以在运行时添加更多。你还可以添加社区插件、配置和解析器来扩展 ESLint 的功能。
+> 📋 系统要求：需要安装 Node.js（^20.19.0、^22.13.0 或 ≥24）并支持 SSL（官方 Node.js 发行版已内置）
 
-> 要使用 ESLint，你必须安装并构建 Node.js（^20.19.0、^22.13.0 或 >=24）并支持 SSL。（如果你使用的是官方 Node.js 发行版，则始终内置 SSL。）
+## 2、使用指南 🚀
 
-## 2、食用指南
-
-### 2.1 安装 ESLint 插件
+### 2.1、安装 ESLint 插件
 
 ```bash
 npm i -D eslint globals @eslint/js
@@ -36,20 +37,19 @@ npm i -D eslint globals @eslint/js
 "lint": "eslint src --fix"
 ```
 
-注: `src` 为指定要检查并修复的目录，可以省略
+📝 注：`src` 为待检查目录，可省略。执行 `npm run lint` 即可进行检查和自动修复
 
 使用命令`npm run lint`对项目文件进行检查并修复
 
-## 3、配置清单
+## 3、配置清单 ⚙️
 
 ### 3.1、配置文件
 
-> 注
-> 推荐使用扁平配置文件。现已弃用 eslintrc 格式
+> 💡 推荐使用扁平配置文件（eslintrc 格式已弃用）
 
 此处仅列举个人喜好的方式配置 ESLint：
 
-- `eslint.config.js`
+- `eslint.config.js`（推荐）
 - `eslint.config.mjs`
 - `eslint.config.cjs`
 
@@ -69,16 +69,12 @@ export default defineConfig([
 ]);
 ```
 
-> 如果你的项目在其`package.json`文件中没有指定`"type":"module"`，则`eslint.config.js`必须是 CommonJS 格式，使用`module.exports`导出
+> ⚠️ 注意：若 `package.json` 未指定 `"type": "module"`，需使用 CommonJS 格式（`module.exports`）
 
----
-
-**拓展: TypeScript 配置文件**
-
-对于 Deno 和 Bun，TypeScript 配置文件是原生支持的；对于 Node.js，你必须在项目中安装可选的开发依赖 jiti（`npm install -D jiti
-`），版本为 2.2.0 或更高版本（ESLint 不会自动安装此依赖）
-
-然后，你可以创建一个带有 .ts、.mts 或 .cts 扩展名的配置文件，并导出 配置对象 数组
+**TypeScript 配置支持**：
+- Deno/Bun：原生支持
+- Node.js：需安装 `jiti` 依赖（`npm install -D jiti`）
+- 支持扩展名：`.ts`、`.mts`、`.cts`
 
 ### 3.2、配置对象
 
@@ -117,7 +113,7 @@ import { defineConfig, globalIgnores } from "eslint/config";
 export default defineConfig([globalIgnores([".config/*"])]);
 ```
 
-## 4、推荐配置
+## 4、推荐配置 🎯
 
 > 更多规则: [https://eslint.nodejs.cn/docs/latest/rules/](https://eslint.nodejs.cn/docs/latest/rules/)
 
@@ -253,3 +249,9 @@ export default defineConfig([
   }
 ]);
 ```
+
+## 5、总结 📋
+
+ESLint 提供了完整的 JavaScript/TypeScript 代码质量保障方案，通过灵活的配置体系和丰富的插件生态，能够适应各种项目需求。建议根据项目技术栈选择合适的配置方案，并定期更新规则以保持代码质量的最佳状态。
+
+🔗 **更多规则参考**：[https://eslint.nodejs.cn/docs/latest/rules/](https://eslint.nodejs.cn/docs/latest/rules/)
