--- a/src/Web 前端/3.工程化/3.代码质量/1.prettier.md
+++ b/src/Web 前端/3.工程化/3.代码质量/1.prettier.md
@@ -11,24 +11,24 @@ permalink: /web/engineering/oxcldb5b/
 
 ### 1.1、什么是 Prettier
 
-- 有态度的代码格式化器
-- 支持多种语言
-- 与大多数编辑器集成
-- 几乎没有选项
+- 🎨 **有态度的代码格式化器**
+- 🌐 支持多种编程语言
+- 🔌 与主流编辑器无缝集成
+- ⚙️ 极简配置选项
 
 ### 1.2、为什么使用 Prettier
 
-- 保存时格式化代码
-- 无需在代码审查中讨论风格
-- 节省时间和精力
+- ⚡ **保存时自动格式化代码**
+- 👥 消除代码审查中的风格争议
+- ⏱️ 显著节省开发时间和精力
 
 ### 1.3、Prettier 关心的是什么
 
-正确性、字符串、空行、多行对象、装饰器、模板字面量、分号、打印宽度、JSX、注释；
+**格式化重点**：正确性、字符串处理、空行管理、多行对象、装饰器、模板字面量、分号使用、打印宽度、JSX 语法、注释处理
 
-Prettier 只打印代码。它不会改变它。这是为了限制 Prettier 的范围
+> 💡 Prettier 仅负责代码格式化，不改变代码逻辑，以此保持工具职责的纯粹性
 
-## 2、食用指南
+## 2、使用指南 🚀
 
 ### 2.1、安装 prettier 插件
 
@@ -38,18 +38,20 @@ npm install -D prettier
 
 ### 2.2、安装 VS Code 插件
 
-- `Prettier - Code formatter`
-  - 该扩展正在从 `esbenp.prettier-vscode` 迁移到 `prettier.prettier-vscode`
-  - 推荐使用`prettier.prettier-vscode`在插件市场搜索安装
-  - 但目前仍使用`esbenp.prettier-vscode`，在未来某个时间会弃用
+- **插件名称**：`Prettier - Code formatter`
+- 🔄 **迁移说明**：正从 `esbenp.prettier-vscode` 迁移至 `prettier.prettier-vscode`
+- ✅ **推荐**：在插件市场搜索 `prettier.prettier-vscode` 安装
+- ⚠️ **注意**：当前仍使用 `esbenp.prettier-vscode`，未来将弃用
 
 ### 2.3、推荐 Vs Code 配置
 
 使用用户配置或工作区配置（`.vscode\settings.json`）都可以
 
-- `editor.formatOnSav: true` 保存时设置文件格式
-- `files.autoSave: onFocusChange` 当编辑器失去焦点时，会自动保存
-- `editor.defaultFormatter esbenp.prettier-vscode` 设置 Prettier 为默认格式化程序
+| 配置项 | 功能说明 | 推荐值 |
+|--------|----------|--------|
+| `editor.formatOnSave` | 保存时自动格式化 | `true` |
+| `files.autoSave` | 编辑器失焦时自动保存 | `"onFocusChange"` |
+| `editor.defaultFormatter` | 设置默认格式化程序 | `"esbenp.prettier-vscode"` |
 
 ```json
 {
@@ -65,9 +67,9 @@ npm install -D prettier
 "format": "prettier --write src/**/*.{js,ts,vue,jsx,tsx}"
 ```
 
-注: `src/**/*.{js,ts,vue,jsx,tsx}` 为指定要格式化的文件（或目录），可以省略
+> 📝 **注**：`src/**/*.{js,ts,vue,jsx,tsx}` 指定格式化范围，可根据需要调整或省略
 
-使用命令`npm run format`对项目文件进行格式化
+运行 `npm run format` 即可格式化项目文件
 
 ## 3、配置清单
 
@@ -82,13 +84,13 @@ npm install -D prettier
 
 ---
 
-**小知识：使用可共享配置**
+**💡 进阶技巧：使用可共享配置**
 
 安装已发布的配置`npm install -D @xxxx/prettier-config`
 
 然后，你可以在`package.json`中引用它，`"prettier": "@xxxx/prettier-config"`
 
-**小知识：扩展可共享配置**
+**扩展可共享配置示例**
 
 ```js
 import xxxxPrettierConfig from "@xxxx/prettier-config";
@@ -119,17 +121,20 @@ coverage
 
 ### 3.3、常用选项
 
-- Print Width: 打印宽度
-- Tab Width: 指定每个缩进级别的空格数
-- Tabs: 用制表符而不是空格缩进行
-- Semicolons: 在语句末尾打印分号
-- Quotes: 使用单引号而不是双引号
-- Arrow Function Parentheses: 在唯一的箭头函数参数周围包含括号
-- 更多选项：[https://prettier.nodejs.cn/docs/options](https://prettier.nodejs.cn/docs/options)
+| 选项 | 说明 | 类型 |
+|------|------|------|
+| `printWidth` | 行最大宽度 | number |
+| `tabWidth` | 缩进空格数 | number |
+| `useTabs` | 使用制表符缩进 | boolean |
+| `semi` | 语句末尾分号 | boolean |
+| `singleQuote` | 使用单引号 | boolean |
+| `arrowParens` | 箭头函数参数括号 | "avoid"｜"always" |
+
+📖 **完整选项参考**：[https://prettier.nodejs.cn/docs/options](https://prettier.nodejs.cn/docs/options)
 
 ---
 
-**推荐配置**
+**✨ 推荐配置方案**
 
 ```json
 {
@@ -138,3 +143,14 @@ coverage
   "arrowParens": "avoid"
 }
 ```
+
+## 4、总结 🎯
+Prettier 通过强制统一的代码风格，显著提升团队协作效率和代码质量。其"有态度"的设计理念减少了配置负担，让开发者更专注于业务逻辑而非代码格式争论。
+
+**使用流程**：安装 → 配置 → 自动化格式化 → 享受整洁代码
+
+**核心价值**：
+- ✅ 消除代码风格争议
+- ✅ 提升开发效率
+- ✅ 保持代码一致性
+- ✅ 减少审阅时间成本
