--- a/src/Web 前端/3.工程化/3.代码质量/3.prettier-and-eslint.md
+++ b/src/Web 前端/3.工程化/3.代码质量/3.prettier-and-eslint.md
@@ -4,7 +4,7 @@ createTime: 2025/12/22 19:52:27
 permalink: /web/engineering/wqbfgh8n/
 ---
 
-## 1、配置 Prettier
+## 1、配置 Prettier：风格统一的“美颜滤镜” 🎨
 
 ### 1.1、安装插件
 
@@ -29,7 +29,7 @@ npm install -D prettier
 ```bash
 dist
 
-**/*.config,js
+*.config.js
 ```
 
 **配置 npm 脚本**
@@ -38,9 +38,9 @@ dist
 "format": "prettier --write src/**/*.{js,ts,vue,jsx,tsx}"
 ```
 
-> 了解更多，请查看[Prettier](./prettier.md)
+> 了解更多，请查看[Prettier](1.prettier.md)
 
-## 2、配置 ESLint
+## 2、配置 ESLint：智能代码医生 🩺
 
 ### 2.1、安装插件
 
@@ -105,9 +105,9 @@ export default defineConfig([
 "lint": "eslint src --fix"
 ```
 
-> 了解更多，请查看[ESLint](./eslint.md)
+> 了解更多，请查看[ESLint](2.eslint.md)
 
-## 3、解决插件冲突
+## 3、解决 ESLint 与 Prettier 冲突 🤝
 
 ### 3.1、安装插件
 
@@ -130,9 +130,11 @@ export default defineConfig([
 ])
 ```
 
-## 4、集成 Vite
+> ✅ **关键作用**：
+> - `eslint-config-prettier`：关闭所有与 Prettier 风格冲突的 ESLint 规则
+> - `eslint-plugin-prettier`：让 ESLint 在检查时调用 Prettier，**统一输出**
 
-> 通过控制台日志显示结果
+## 4、集成 Vite：开发时实时校验 🚀
 
 ### 4.1、安装插件
 
@@ -162,3 +164,20 @@ export default defineConfig(() => {
   }
 })
 ```
+
+> 💡 **效果**：  
+> 开发时在终端实时输出 ESLint 警告/错误，**保存即修复**，无需手动执行命令！
+
+## 5、对比：ESLint vs Prettier ✅
+
+| 维度 | ESLint | Prettier |
+|------|--------|----------|
+| **核心目标** | 代码质量、错误预防、最佳实践 | 代码风格统一、格式美化 |
+| **处理范围** | 逻辑错误、变量使用、类型安全、设计模式 | 空格、换行、引号、分号、缩进 |
+| **是否可配置** | 极高（数千条规则） | 中等（约 70 项选项） |
+| **是否可自动修复** | ✅ 大部分规则 | ✅ 全部规则 |
+| **是否推荐并用** | ✅ 必须 | ✅ 必须 |
+| **冲突风险** | 高（需配合 `eslint-config-prettier`） | 低（专为风格设计） |
+| **性能影响** | 中等（静态分析） | 极低（纯格式化） |
+
+> 🎯 **最佳实践**：**Prettier 管风格，ESLint 管逻辑**，二者互补，缺一不可！
